--- a/index.html
+++ b/index.html
@@ -1,9 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="utf-8">
-<title>GIS Programming Project</title>
+  <meta charset="utf-8">
+  <title>GIS Programming Project</title>
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.3/dist/leaflet.css" />
 </head>
 <body>
+  <div id="map" style="width: 705px; height: 375px"></div>
+  <script>
+    // Create variable to hold map element, give initial settings to map
+    var map = L.map('map',{ center: [42.362432, -71.086086], zoom: 14});
+    // Add OpenStreetMap tile layer to map element
+L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', { attribution: '© OpenStreetMap' }).addTo(map);
+</script>
+  <script src="https://unpkg.com/leaflet@1.0.3/dist/leaflet.js"></script>
 </body>
 </html>
