--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', { attribution: '© OpenSt
     map.on('locationfound', onLocationFound);
     function onLocationFound(e) {
       //create a marker at the user's "latlng" and add it to the map
-      L.marker(e.latlng)addTo(mymap);
+      L.marker(e.latlng)addTo(map);
     }
 </script>
 </body>
