--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
     var map = L.map('map',{ center: [29.651974, -82.325011], zoom: 14});
     // Add OpenStreetMap tile layer to map element
 L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', { attribution: '© OpenStreetMap' }).addTo(map);
-</script>
+map.locate({setView: true, maxZoom: 15});
+/** bind the locationfound event to the function onLocationFound()
+    in other words, tell Leaflet what to do once locate() is successful 
+**/
+map.on('locationfound', onLocationFound);
+function onLocationFound(e) {
+    // create a marker at the users "latlng" and add it to the map
+    L.marker(e.latlng).addTo(map);
+}
+  </script>
 </body>
 </html>
