--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@ function onLocationFound(e) {
     // create a marker at the users "latlng" and add it to the map
     L.marker(e.latlng).addTo(map);
 }
+    // Load GeoJSON file from repository
+    $getJSON("pts.geojson",function(webmap){
+      //Add GeoJSON layer to map
+      L.geoJson(webmap).addTo(map);
+    });
   </script>
 </body>
 </html>
