--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
   <meta charset="utf-8">
   <title>GIS Programming Project</title>
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.3/dist/leaflet.css" />
+  <style>
+    .custom .leaflet-popup-tip,
+    .custom .leaflet-popup-content-wrapper {
+      background: #e93434;
+      color: #ffffff;
+    }
+  </style>
 </head>
 <body>
   <div id="map" style="width: 705px; height: 375px"></div>
@@ -31,6 +38,12 @@ function onLocationFound(e) {
           layer.bindPopup('<h3>'+feature.properties.name+'</h3><p>'+feature.properties.description+'</p>');
         }
       }).addTo(map);
+    });
+    //Create custom popup icon
+    var popupIcon = L.icon({
+      iconUrl: 'https://www.google.com/url?sa=i&source=images&cd=&cad=rja&uact=8&ved=2ahUKEwiu9d6e0freAhVKb60KHVQeAIYQjRx6BAgBEAU&url=https%3A%2F%2Femojiisland.com%2Fproducts%2Fcowboy-iphone-emoji-jpg&psig=AOvVaw1G5fJIqaNrNJRLjuh5tNmr&ust=1543616372843357',
+      iconSize: [38, 95], //size of icon
+      popupAnchor: [0,-15]
     });
   </script>
 </body>
