--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </style>
 </head>
 <body>
-  <div id="map" style="width: 705px; height: 375px"></div>
+  <div id="map" style="width: 705px; height: 375px">
   <script src="https://unpkg.com/leaflet@1.0.3/dist/leaflet.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script>
@@ -40,5 +40,6 @@ function onLocationFound(e) {
       }).addTo(map);
     });
   </script>
+    </div>
 </body>
 </html>
