--- a/index.html
+++ b/index.html
@@ -22,13 +22,16 @@
     // Add OpenStreetMap tile layer to map element
 L.tileLayer('https://cartodb-basemaps-{s}.global.ssl.fastly.net/dark_all/{z}/{x}/{y}.png', { attribution: '© OpenStreetMap' }).addTo(map);
 map.locate({setView: true, maxZoom: 15});
+    var ghostIcon = L.icon({
+      iconUrl: 'https://image.flaticon.com/icons/svg/1138/1138148.svg',
+    });
 /** bind the locationfound event to the function onLocationFound()
     in other words, tell Leaflet what to do once locate() is successful 
 **/
 map.on('locationfound', onLocationFound);
 function onLocationFound(e) {
     // create a marker at the users "latlng" and add it to the map
-    L.marker(e.latlng).addTo(map);
+    L.marker(e.latlng, {icon:ghostIcon}).addTo(map);
 }
     // Load GeoJSON file from repository
     $.getJSON("pts.geojson",function(webmap){
