--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ map.locate({setView: true, maxZoom: 15});
 map.on('locationfound', onLocationFound);
 function onLocationFound(e) {
     // create a marker at the users "latlng" and add it to the map
-    L.marker(e.latlng, {icon:ghostIcon}).addTo(map);
+    L.marker([e.latlng], {icon:ghostIcon}).addTo(map);
 }
     // Load GeoJSON file from repository
     $.getJSON("pts.geojson",function(webmap){
