--- a/index.html
+++ b/index.html
@@ -23,9 +23,7 @@
 L.tileLayer('https://cartodb-basemaps-{s}.global.ssl.fastly.net/dark_all/{z}/{x}/{y}.png', { attribution: '© OpenStreetMap' }).addTo(map);
 map.locate({setView: true, maxZoom: 15});
     var ghostIcon = L.icon({
-      iconUrl: 'https://image.flaticon.com/icons/svg/1138/1138148.svg',
-      iconSize: [94, 94]
-      iconAnchor: [50, 64]
+      iconUrl: 'https://imgur.com/a/sif2eQ1',
     });
 /** bind the locationfound event to the function onLocationFound()
     in other words, tell Leaflet what to do once locate() is successful 
