--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 L.tileLayer('https://cartodb-basemaps-{s}.global.ssl.fastly.net/dark_all/{z}/{x}/{y}.png', { attribution: '© OpenStreetMap' }).addTo(map);
 map.locate({setView: true, maxZoom: 15});
     var ghostIcon = L.icon({
-      iconUrl: 'https://imgur.com/a/k3eSfj8',
+      iconUrl: 'https://imgur.com/a/PObRaEz',
     });
 /** bind the locationfound event to the function onLocationFound()
     in other words, tell Leaflet what to do once locate() is successful 
