--- a/index.html
+++ b/index.html
@@ -25,13 +25,16 @@ map.locate({setView: true, maxZoom: 15});
     var ghostIcon = L.icon({
       iconUrl: 'https://imgur.com/a/PObRaEz',
     });
+    var userIcon = L.icon({
+      iconUrl: 'https://imgur.com/a/Jrmvtu9'
+    });
 /** bind the locationfound event to the function onLocationFound()
     in other words, tell Leaflet what to do once locate() is successful 
 **/
 map.on('locationfound', onLocationFound);
 function onLocationFound(e) {
     // create a marker at the users "latlng" and add it to the map
-    L.marker(e.latlng, {icon:ghostIcon}).addTo(map);
+    L.marker(e.latlng, {icon:userIcon}).addTo(map);
 }
     // Load GeoJSON file from repository
     $.getJSON("pts.geojson",function(webmap){
