--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@ function onLocationFound(e) {
       //Add GeoJSON layer to map
       L.geoJson(webmap,{
         pointToLayer: function(feature, latlng) {
-          var ghostIcon = L.icon({
+          var ghostIcon = new L.icon({
       iconUrl: 'https://imgur.com/a/PObRaEz'
     });
-          return L.marker(latlng, {icon: ghostIcon});
+          return L.marker(latlng, {icon:ghostIcon});
         },
         onEachFeature: function (feature, layer) {
           layer.bindPopup('<h3>'+feature.properties.name+'</h3><p>'+feature.properties.description+'</p>');
