--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
   </style>
 </head>
 <body>
+  <div id="header" style="height: 200px">
+    <h1>Heading 1</h1>
+    <h2>Heading 2</h2>
+    <h3>Heading 3</h3>
+  </div>
   <div id="map" style="height: 700px">
   <script src="https://unpkg.com/leaflet@1.0.3/dist/leaflet.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
