--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     }
   </style>
 </head>
-<body style="background-color:576074;">
+<body style="background-color:blue;">
   <div id="header" style="height: 200px">
     <h1 style="font-family:verdana;">Heading 1</h1>
     <h2>Heading 2</h2>
