--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>GIS Programming Project</title>
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.3/dist/leaflet.css" />
+  <link href='https://fonts.googleapis.com/css?family=Astloch' rel='stylesheet'>
   <style>
     .custom .leaflet-popup-tip,
     .custom .leaflet-popup-content-wrapper {
@@ -12,9 +13,9 @@
     }
   </style>
 </head>
-<body style="background-color:blue;">
+<body style="background-color:576074;">
   <div id="header" style="height: 200px">
-    <h1 style="font-family:verdana;">Heading 1</h1>
+    <h1 style="font-family:'Astloch';">Heading 1</h1>
     <h2>Heading 2</h2>
     <h3>Heading 3</h3>
   </div>
