--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     }
   </style>
 </head>
-<body style="background-color:576074;">
+<body style="background-color:#576074;">
   <div id="header" style="height: 200px">
     <h1 style="font-family:'Astloch';">Heading 1</h1>
     <h2>Heading 2</h2>
