--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body style="background-color:#576074;">
   <div id="header" style="height: 200px">
-    <h1 style="font-family:'Astloch'"; "text-align: center"; "font-size: 150%">Heading 1</h1>
+    <h1 style="font-family:'Astloch';text-align:center;font-size:150%">Heading 1</h1>
     <h2>Heading 2</h2>
     <h3>Heading 3</h3>
   </div>
