--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   </style>
 </head>
 <body style="background-color:#576074;">
-  <div id="header" style="height: 80px">
-    <h1 style="font-family:'Astloch';text-align:center;font-size:300%">Ghouls of Gainesville</h1>
+  <div id="header" style="height: 75px">
+    <h1 style="font-family:'Astloch';text-align:center;font-size:300%"><b>Ghouls of Gainesville</b></h1>
   </div>
   <div id="map" style="height: 500px">
   <script src="https://unpkg.com/leaflet@1.0.3/dist/leaflet.js"></script>
