--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div id="header" style="height: 75px">
     <h1 style="font-family:'Astloch';text-align:center;font-size:300%"><b>Ghouls of Gainesville</b></h1>
   </div>
-  <div id="map" style="height: 500px">
+  <div id="map" style="height: 500px;border:0px">
   <script src="https://unpkg.com/leaflet@1.0.3/dist/leaflet.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script>
