--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>GIS Programming Project</title>
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.3/dist/leaflet.css" />
-  <link href='https://fonts.googleapis.com/css?family=Astloch' rel='stylesheet'>
+  <link href='https://fonts.googleapis.com/css?family=Eater' rel='stylesheet'>
   <style>
     .custom .leaflet-popup-tip,
     .custom .leaflet-popup-content-wrapper {
@@ -15,7 +15,7 @@
 </head>
 <body style="background-color:#576074;">
   <div id="header" style="height: 75px">
-    <h1 style="font-family:'Astloch';text-align:center;font-size:300%"><b>Ghouls of Gainesville</b></h1>
+    <h1 style="font-family:'Eater';text-align:center;font-size:300%"><b>Ghouls of Gainesville</b></h1>
   </div>
   <div id="map" style="height: 500px;border:0px">
   <script src="https://unpkg.com/leaflet@1.0.3/dist/leaflet.js"></script>
