--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>GIS Programming Project</title>
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.3/dist/leaflet.css" />
   <link href='https://fonts.googleapis.com/css?family=Eater' rel='stylesheet'>
+  <link rel="stylesheet" type="text/css" href="ggstyles.css">
   <style>
     .custom .leaflet-popup-tip,
     .custom .leaflet-popup-content-wrapper {
