--- a/index.html
+++ b/index.html
@@ -5,16 +5,17 @@
   <title>GIS Programming Project</title>
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.3/dist/leaflet.css" />
   <link href='https://fonts.googleapis.com/css?family=Eater' rel='stylesheet'>
-  <link rel="stylesheet" type="text/css" href="ggstyles.css">
   <style>
     .custom .leaflet-popup-tip,
     .custom .leaflet-popup-content-wrapper {
       background: #e93434;
       color: #ffffff;
     }
+	  body {background-color: ##576074;}
+	  h1: {color: #BAC6E0;}
   </style>
 </head>
-<body style="background-color:#576074;">
+<body>
   <div id="header" style="height: 85px">
     <h1 style="font-family:'Eater';text-align:center;font-size:250%"><b>Ghouls of Gainesville</b></h1>
     <ul id="gn-menu" class="gn-menu-main">
