--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
       background: #e93434;
       color: #ffffff;
     }
-	  body {background-color: ##576074;}
-	  h1: {color: #BAC6E0;}
+	body {background-color: #576074;}
+	h1: {color: #BAC6E0;}
   </style>
 </head>
 <body>
