--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       color: #ffffff;
     }
 	body {background-color: #576074;}
-	h1: {color: #BAC6E0;}
+	h1 {color: #BAC6E0;}
   </style>
 </head>
 <body>
