--- a/index.html
+++ b/index.html
@@ -11,7 +11,15 @@
       background: #e93434;
       color: #ffffff;
     }
-	body {background-color: #576074;}
+	body {
+		background-color: #576074;
+	  	padding: 0;
+	  	margin: 0;
+	  }
+	  html, body, #map {
+		  height: 100%;
+		  width: 100%;
+	  }
 	h1 {color: #BAC6E0;}
   </style>
 </head>
@@ -19,7 +27,7 @@
   <div id="header" style="height: 85px">
     <h1 style="font-family:'Eater';text-align:center;font-size:250%"><b>Ghouls of Gainesville</b></h1>
   </div>
-  <div id="map" style="height: 500px;border:0px">
+  <div id="map" style="height: 500px">
   <script src="https://unpkg.com/leaflet@1.0.3/dist/leaflet.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script>
