--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
 L.tileLayer('https://cartodb-basemaps-{s}.global.ssl.fastly.net/dark_all/{z}/{x}/{y}.png', { attribution: '© OpenStreetMap' }).addTo(map);
 map.locate({setView: true, maxZoom: 15});
     var userIcon = L.icon({
-      iconUrl: 'https://imgur.com/a/Jrmvtu9'
+      iconUrl: 'https://imgur.com/a/Jrmvtu9',
+      iconSize: [64, 64],
+      iconAnchor: [0, 0],
     });
 /** bind the locationfound event to the function onLocationFound()
     in other words, tell Leaflet what to do once locate() is successful 
