--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@ map.locate({setView: true, maxZoom: 15});
       iconUrl: 'https://image.flaticon.com/icons/svg/1299/1299949.svg',
       iconSize: [32, 32],
       iconAnchor: [0, 0],
+      popupAnchor: [0, 0],
     });
 /** bind the locationfound event to the function onLocationFound()
     in other words, tell Leaflet what to do once locate() is successful 
@@ -58,6 +59,7 @@ function onLocationFound(e) {
       iconUrl: 'https://image.flaticon.com/icons/svg/1138/1138148.svg',
       iconSize: [32, 32],
       iconAnchor: [0, 0],
+      popupAnchor: [0, 0],
     });
           return L.marker(latlng, {icon:ghostIcon});
         },
