--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     var map = L.map('map',{ center: [29.651974, -82.325011], zoom: 14, scrollWheelZoom: false});
     // Add OpenStreetMap tile layer to map element
 L.tileLayer('https://cartodb-basemaps-{s}.global.ssl.fastly.net/dark_all/{z}/{x}/{y}.png', { attribution: '© OpenStreetMap' }).addTo(map);
-map.locate({setView: true, maxZoom: 15});
+map.locate({setView: false, maxZoom: 15});
     var userIcon = L.icon({
       iconUrl: 'https://image.flaticon.com/icons/svg/1299/1299949.svg',
       iconSize: [32, 32],
