--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>GIS Programming Project</title>
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.3/dist/leaflet.css" />
   <link href='https://fonts.googleapis.com/css?family=Metal Mania' rel='stylesheet'>
-  <style>
+  <style type="text/css">
     .custom .leaflet-popup-tip,
     .custom .leaflet-popup-content-wrapper {
       background: #e93434;
@@ -13,9 +13,16 @@
     }
 	body {
 		background-color: #576074;
-	  	padding: 0;
-	  	margin: 0;
 	  }
+	div.header {
+		padding: 10px;
+		margin: 10px;
+	  }
+	div.map {
+		padding: 0px;
+		margin: 10px;
+	  }		
+		
 	  html, body, #map {
 		  height: 100%;
 		  width: 100%;
