--- a/index.html
+++ b/index.html
@@ -13,14 +13,12 @@
     }
 	body {
 		background-color: #576074;
-	  }
-	div.header {
-		padding: 10px;
-		margin: 10px;
+		padding: 0px;
+		margin: 0px
 	  }
 	div.map {
 		padding: 0px;
-		margin: 10px;
+		margin: 0px;
 	  }		
 		
 	  html, body, #map {
