--- a/index.html
+++ b/index.html
@@ -11,19 +11,16 @@
       background: #e93434;
       color: #ffffff;
     }
-	body {
+	html, body, #header {
 		background-color: #576074;
-		padding: 0px;
-		margin: 0px
-	  }
-	div.map {
-		padding: 0px;
-		margin: 0px;
-	  }		
-		
+		padding: 10px;
+		margin: 10px;
+	  }			
 	  html, body, #map {
 		  height: 100%;
 		  width: 100%;
+		  padding: 0px;
+		  margin: 0px;		
 	  }
 	h1 {color: #BAC6E0;}
   </style>
