--- a/index.html
+++ b/index.html
@@ -20,14 +20,19 @@
 		  height: 100%;
 		  width: 100%;
 		  padding: 0px;
-		  margin: 0px;		
+		  margin: 0px;			  
 	  }
-	h1 {color: #BAC6E0;}
+	h1 {
+		color: #BAC6E0;
+		font: 'Metal Mania';
+		font-size: 60px;
+		text-align: left
+	  }
   </style>
 </head>
 <body>
-  <div id="header" style="height: 85px">
-    <h1 style="font-family:'Metal Mania';text-align:left;font-size:250%"><b>Ghouls of Gainesville</b></h1>
+  <div id="header">
+    <h1><b>Ghouls of Gainesville</b></h1>
   </div>
   <div id="map" style="height: 500px">
   <script src="https://unpkg.com/leaflet@1.0.3/dist/leaflet.js"></script>
