--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	  }
 	h1 {
 		color: #BAC6E0;
-		font: 'Metal Mania';
+		font-family: 'Metal Mania';
 		font-size: 60px;
 		text-align: left
 	  }
