--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
 		background-color: #576074;
 		padding: 10px;
 		margin: 10px;
+		height: 80px;
 	  }			
 	  html, body, #map {
-		  height: 100%;
+		  height: 500px;
 		  width: 100%;
 		  padding: 0px;
 		  margin: 0px;			  
@@ -34,7 +35,7 @@
   <div id="header">
     <h1><b>Ghouls of Gainesville</b></h1>
   </div>
-  <div id="map" style="height: 500px">
+  <div id="map">
   <script src="https://unpkg.com/leaflet@1.0.3/dist/leaflet.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script>
