--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 	html, body, #header {
 		background-color: #576074;
 		padding: 10px;
-		margin: 10px;
+		margin-left: 10px;
+		margin-top: 30px;
+		margin-bottom: 30px;
 		height: 80px;
 	  }			
 	  html, body, #map {
