--- a/index.html
+++ b/index.html
@@ -26,28 +26,68 @@
 		margin-bottom: 30px;
 		height: 80px;
 	  }			
+	  h1 {
+		color: #BAC6E0;
+		font-family: "Metal Mania";
+		font-size: 60px;
+		text-align: left
+	  }
+	  .popup {
+		  position: relative;
+		  display: inline-block;
+		  cursor pointer;
+	  }
+	  .popup .popuptext {
+		  visibility: hidden;
+		  width: 160px;
+		  background-color: #555;
+		  color: #fff;
+		  text-align: center;
+		  border-radius: 6px;
+		  padding: 8px 0;
+		  position: absolute;
+		  z-index: 1;
+		  bottom: 125%;
+		  left: 50%;
+		  margin-left: -80px;
+	  }
+	  .popup .show {
+		  visibility: visible;
+		  -webkit-animation: fadeIn 1s;
+		  animation: fadeIn 1s;
+	  }
+	  @-webkit-keyframes fadeIn {
+		  from {opacity: 0;}
+		  to {opacity: 1;};
+	  }
+	  @keyframes fadeIn {
+		  from {opacity: 0;}
+		  to {opacity:1 ;}
+	  }
 	  html, body, #map {
 		  height: 500px;
 		  width: 100%;
 		  padding: 0px;
 		  margin: 0px;			  
 	  }
-	h1 {
-		color: #BAC6E0;
-		font-family: "Metal Mania";
-		font-size: 60px;
-		text-align: left
-	  }
   </style>
 </head>
 <body>
   <div id="header">
     <h1><b>Ghouls of Gainesville</b></h1>
+	<div class="popup" onclick="myFunction()">About
+		<span class="popuptext" id="aboutPopup"></span>
+	  </div>
   </div>
   <div id="map">
   <script src="https://unpkg.com/leaflet@1.0.3/dist/leaflet.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script>
+	  // When user clicks on <div> for "about," open the popup
+	  function myFunction() {
+		  var poup=document.getElementById("myPopup");
+		  popup.classList.toggle("show");
+	  }
     // Variable to hold map. Includes settings for where the map will center upon loading, zoom level, etc.
     var map = L.map('map',{ center: [29.651974, -82.325011], zoom: 14, scrollWheelZoom: false});
     // Add OpenStreetMap tile layer to map element + attribution
