--- a/index.html
+++ b/index.html
@@ -35,7 +35,11 @@
 	  .popup {
 		  position: relative;
 		  display: inline-block;
-		  cursor pointer;
+		  cursor: pointer;
+		  -webkit-user-select: none;
+		  moz-user-select: none;
+		  -ms-user-select: none;
+		  user-select: none;
 	  }
 	  .popup .popuptext {
 		  visibility: hidden;
@@ -50,6 +54,17 @@
 		  bottom: 125%;
 		  left: 50%;
 		  margin-left: -80px;
+	  }
+	  .popup .popuptext::after {
+		  content: "";
+		  position: absolute;
+		  top: 100%;
+		  left: 50%;
+		  margin-left: -5px;
+		  border-width: 5px;
+		  border-width: 5px;
+		  border-style: solid;
+		  boder-color: #555 transparent transparent transparent;
 	  }
 	  .popup .show {
 		  visibility: visible;
@@ -75,8 +90,9 @@
 <body>
   <div id="header">
     <h1><b>Ghouls of Gainesville</b></h1>
-	<div class="popup" onclick="myFunction()">About
-		<span class="popuptext" id="aboutPopup"></span>
+	  <h2>Popup</h2>
+	  <div class="popup" onclick="myFunction()">About
+		<span class="popuptext" id="aboutPopup">Hey :3</span>
 	  </div>
   </div>
   <div id="map">
