--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ function onLocationFound(e) {
           return L.marker(latlng, {icon:ghostIcon}); // Adds markers to all features in geoJSON file using custom ghostIcon
         },
         onEachFeature: function (feature, layer) { // Adds popups to all features in geoJSON file that include name, description, etc. 
-          layer.bindPopup('<img src="'+feature.properties.Picture+'" style="width:100px;height:100px;"><h3>'+feature.properties.name+'</h3><h4>'+feature.properties.address+'</h4><p>'+feature.properties.description+'</p>');
+          layer.bindPopup('<img src="'+feature.properties.Picture+'" style="width:300px"><h3>'+feature.properties.name+'</h3><h4>'+feature.properties.address+'</h4><p>'+feature.properties.description+'</p>');
         }
       }).addTo(map);
     });
