--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
 		font-size: 60px;
 		text-align: left
 	  }
+	  html, body, #footer {
+		  background-color: #576074;
+		  height: 200px;
+	  }
 	  .popup { /*Menu popup container*/
 		  position: relative;
 		  display: inline-block;
@@ -144,5 +148,7 @@ function onLocationFound(e) {
     });
   </script>
     </div>
+	</div id="footer">
+	</div>
 </body>
 </html>
