--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     .custom .leaflet-popup-tip,
     .custom .leaflet-popup-content-wrapper {
       background: #e93434;
-      color: #ffffff;
+      color: #D8E1F4;
     }
 	html, body, #header {
 		background-color: #576074;
