--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <style type="text/css">
     .custom .leaflet-popup-tip,
     .custom .leaflet-popup-content-wrapper {
-      background: #e93434;
+      background: #D8E1F4;
       color: #D8E1F4;
     }
 	html, body, #header {
