--- a/index.html
+++ b/index.html
@@ -15,12 +15,11 @@
   <style type="text/css">
     .custom .leaflet-popup-tip,
     .custom .leaflet-popup-content-wrapper {
-      background: #D8E1F4;
-      color: #D8E1F4;
+      background-color: #D8E1F4;
     }
 	html, body, #header {
 		background-color: #576074;
-		padding: 10px;
+		padding: 0px;
 		margin-left: 10px;
 		margin-top: 0px;
 		margin-bottom: 30px;
