--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 		background-color: #576074;
 		padding: 10px;
 		margin-left: 20px;
+		margin-top: 10px;
+		margin-bottom: 0px;
 		height: 50px;
 	  }			
 	  h1 {
