--- a/index.html
+++ b/index.html
@@ -21,15 +21,16 @@
 		background-color: #576074;
 		padding: 10px;
 		margin-left: 20px;
-		margin-top: 10px;
+		margin-top: 0px;
 		margin-bottom: 0px;
-		height: 50px;
+		height: 60px;
 	  }			
 	  h1 {
 		color: #BAC6E0;
 		font-family: "Metal Mania";
 		font-size: 60px;
-		text-align: left
+		text-align: left;
+		margin-top: 10px;
 	  }
 	  html, body, #footer {
 		  background-color: #576074;
