--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 		font-size: 60px;
 		text-align: left;
 		margin-top: 10px;
+		margin-bottom: 10px;
 	  }
 	  html, body, #footer {
 		  background-color: #576074;
