--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 		text-align: left;
 		margin-top: 10px;
 		margin-bottom: 10px;
+		padding: 10px;
 	  }
 	  html, body, #footer {
 		  background-color: #576074;
