--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
   <style type="text/css">
     .custom .leaflet-popup-tip,
     .custom .leaflet-popup-content-wrapper {
-      background-color: #D8E1F4;
+      background: #D8E1F4;
+      box-shadow: 0 3px 14px
+	      rgba(0,0,0,0.4);
     }
 	html, body, #header {
 		background-color: #576074;
