--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
       box-shadow: 0 3px 14px
 	      rgba(0,0,0,0.4);
     }
+	html, body,
+	  height: 100%;
+	  }
 	html, body, #header {
 		background-color: #576074;
 		margin-left: 20px;
@@ -35,7 +38,7 @@
 		margin-bottom: 10px;
 	  }
 	  html, body, #map {
-		  height: 500px;
+		  height: 100%;
 		  width: 100%;
 		  padding: 0px;
 		  margin: 0px;			  
