--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
       box-shadow: 0 3px 14px
 	      rgba(0,0,0,0.4);
     }
-	html, body, #header {
+	html, body {
 		background-color: #576074;
 		margin-left: 20px;
 		margin-top: 0px;
 		margin-bottom: 0px;
-		height: 70px;
+		height: 100%;
 	  }			
 	  h1 {
 		color: #BAC6E0;
@@ -35,7 +35,7 @@
 		margin-bottom: 10px;
 	  }
 	  html, body, #map {
-		  height: 90%;
+		  height: 100%;
 		  width: 100%;
 		  padding: 0px;
 		  margin: 0px;			  
