--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
 	      rgba(0,0,0,0.4);
     }
 	html, body {
-		background-color: #576074;
+		background-color: #E5E7EA;
 		margin-left: 20px;
 		margin-top: 0px;
 		margin-bottom: 0px;
 		height: 100%;
 	  }			
 	  h1 {
-		color: #BAC6E0;
+		color: #576074;
 		font-family: "Metal Mania";
 		font-size: 60px;
 		text-align: left;
