--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
       box-shadow: 0 3px 14px
 	      rgba(0,0,0,0.4);
     }
-	html, body {
+	html, body #header {
 		background-color: #E5E7EA;
 		margin-left: 20px;
 		margin-top: 0px;
 		margin-bottom: 0px;
-		height: 100%;
+		height: 70px;
 	  }			
 	  h1 {
 		color: #576074;
