--- a/index.html
+++ b/index.html
@@ -27,9 +27,10 @@
 		height: 70px;
 	  }			
 	  h1 {
-		color: #576074;
+		color: #B7C0DE;
 		font-family: "Metal Mania";
 		font-size: 60px;
+		text-shadow: 5px 5px #ff0000;
 		text-align: left;
 		margin-top: 0px;
 		margin-bottom: 10px;
