--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		color: #B7C0DE;
 		font-family: "Metal Mania";
 		font-size: 60px;
-		text-shadow: 3px 3px #99A2BD;
+		text-shadow: 3px 3px #686D7D;
 		text-align: left;
 		margin-top: 0px;
 		margin-bottom: 10px;
