--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html>
-<head profile="https://muribasterra.github.io/webmap/profile">
-	<link rel="icon"
-	      type="image/png"
-	      href="https://image.flaticon.com/icons/svg/1138/1138148.svg">
+<head>
+	<link rel="shortcut icon" type="image/png" href="https://image.flaticon.com/icons/svg/1138/1138148.svg">
   	<meta charset="utf-8">
   <title>Ghouls of Gainesville</title>
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.3/dist/leaflet.css" />
