--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		color: #B7C0DE;
 		font-family: "Metal Mania";
 		font-size: 60px;
-		text-shadow: 3px 3px #686D7D;
+		text-shadow: 3px 3px #3F434E;
 		text-align: left;
 		margin-top: 0px;
 		margin-bottom: 10px;
