--- a/index.html
+++ b/index.html
@@ -30,6 +30,26 @@
 		margin-top: 0px;
 		margin-bottom: 10px;
 	  }
+	  .topnav {
+		  background-color: #333;
+		  overflow: hidden;
+	  }
+	  .topnav a {
+		  float:left;
+		  color: #f2f2f2;
+		  text-align: center;
+		  padding: 14px 16px;
+		  text-decoration: none;
+		  font-size: 17px;
+	  }
+	  .topnav a:hover {
+		  background-color: #ddd;
+		  color: black;
+	  }
+	  .top a.active {
+		  background-color: #4CAF50;
+		  color: white;
+	  }
 	  html, body, #map {
 		  height: 100%;
 		  width: 100%;
@@ -41,6 +61,10 @@
 <body>
   <div id="header">
     <h1><b>Ghouls of Gainesville</b></h1>
+	  <div class="topnav">
+		  <a class="active" href=#about">About</a>
+		  <a href=#credits>Credits</a>
+	</div>
   </div>
   <div id="map">
   <script src="https://unpkg.com/leaflet@1.0.3/dist/leaflet.js"></script>
