--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		text-align: left;
 		margin-top: 0px;
 		margin-bottom: 10px;
-	  }
+	  }		  
 	  html, body, #map {
 		  height: 95%;
 		  width: 100%;
@@ -40,8 +40,8 @@
 </head>
 <body>
   <div id="header">
-    <h1><b>Ghouls of Gainesville</b></h1>
 	  <div class="topnav">
+		  <a <h1>Ghouls of Gainesville</h1></a>
 		  <a class="active" href=#about">About</a>
 		  <a href=#credits>Credits</a>
 	</div>
