--- a/index.html
+++ b/index.html
@@ -20,7 +20,26 @@
 		margin-top: 0px;
 		margin-bottom: 0px;
 		height: 80px;
-	  }			
+	  }		
+	  .topnav {
+		  overflow: hidden
+	  }
+	.topnav a {
+  		float: right;
+  		color: #f2f2f2;
+  		text-align: center;
+  		padding: 14px 16px;
+ 		text-decoration: none;
+  		font-size: 17px;
+	  }
+	.topnav a:hover {
+ 		 background-color: #ddd;
+  		 color: black;
+	  }
+	.topnav a.active {
+ 		background-color: #4CAF50;
+  		color: white;
+	  }
 	  h1 {
 		color: #B7C0DE;
 		font-family: "Metal Mania";
@@ -40,8 +59,8 @@
 </head>
 <body>
   <div id="header">
+	  <h1>Ghouls of Gainesville</h1>
 	  <div class="topnav">
-		  <a <h1>Ghouls of Gainesville</h1></a>
 		  <a class="active" href=#about">About</a>
 		  <a href=#credits>Credits</a>
 	</div>
