--- a/index.html
+++ b/index.html
@@ -20,11 +20,9 @@
 		margin-top: 0px;
 		margin-bottom: 0px;
 		height: 80px;
+		overflow: hidden;
 	  }		
-	  .topnav {
-		  overflow: hidden
-	  }
-	.topnav a {
+	.header a {
   		float: right;
   		color: #f2f2f2;
   		text-align: center;
@@ -32,15 +30,15 @@
  		text-decoration: none;
   		font-size: 17px;
 	  }
-	.topnav a:hover {
+	.header a:hover {
  		 background-color: #ddd;
   		 color: black;
 	  }
-	.topnav a.active {
+	.header a.active {
  		background-color: #4CAF50;
   		color: white;
 	  }
-	  h1 {
+	 .header h1 {
 		color: #B7C0DE;
 		font-family: "Metal Mania";
 		font-size: 60px;
@@ -60,9 +58,8 @@
 <body>
   <div id="header">
 	  <h1>Ghouls of Gainesville</h1>
-	  <div class="topnav">
-		  <a class="active" href=#about">About</a>
-		  <a href=#credits>Credits</a>
+	  <a class="active" href=#about">About</a>
+	  <a href=#credits>Credits</a>
 	</div>
   </div>
   <div id="map">
