--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 		margin-left: 20px;
 		margin-top: 0px;
 		margin-bottom: 0px;
-		height: 80px;
+		height: 200px;
 		overflow: hidden;
 	  }		
-	.header a {
+	.topnav a {
   		float: right;
   		color: #f2f2f2;
   		text-align: center;
@@ -30,15 +30,15 @@
  		text-decoration: none;
   		font-size: 17px;
 	  }
-	.header a:hover {
+	.topnav a:hover {
  		 background-color: #ddd;
   		 color: black;
 	  }
-	.header a.active {
+	.topnav a.active {
  		background-color: #4CAF50;
   		color: white;
 	  }
-	 .header h1 {
+	 h1 {
 		color: #B7C0DE;
 		font-family: "Metal Mania";
 		font-size: 60px;
@@ -58,9 +58,11 @@
 <body>
   <div id="header">
 	  <h1>Ghouls of Gainesville</h1>
+	  <div class="topnav">
 	  <a class="active" href=#about">About</a>
 	  <a href=#credits>Credits</a>
-	</div>
+	  </div>
+</div>
   </div>
   <div id="map">
   <script src="https://unpkg.com/leaflet@1.0.3/dist/leaflet.js"></script>
