--- a/index.html
+++ b/index.html
@@ -19,25 +19,9 @@
 		margin-left: 20px;
 		margin-top: 0px;
 		margin-bottom: 0px;
-		height: 200px;
+		height: 150px;
 		overflow: hidden;
 	  }		
-	.topnav a {
-  		float: right;
-  		color: #f2f2f2;
-  		text-align: center;
-  		padding: 14px 16px;
- 		text-decoration: none;
-  		font-size: 17px;
-	  }
-	.topnav a:hover {
- 		 background-color: #ddd;
-  		 color: black;
-	  }
-	.topnav a.active {
- 		background-color: #4CAF50;
-  		color: white;
-	  }
 	 h1 {
 		color: #B7C0DE;
 		font-family: "Metal Mania";
@@ -46,7 +30,39 @@
 		text-align: left;
 		margin-top: 0px;
 		margin-bottom: 10px;
-	  }		  
+	  }
+	  .modal {
+		  display: none; /*Hidden by default*/
+		  position: fixed; /*Stay in place*/
+		  z-index: 1; /*sit on top*/
+		  padding-top: 100px; /*Location of box*/
+		  left: 0;
+		  top: 0;
+		  width: 100%;
+		  height: 100%;
+		  overflow: auto; /*Enable scrolling if needed*/
+		  background-color: rgb(0,0,0); /*Fallback color*/
+		  background-color: rgba(0,0,0,0.4); /*Black with opacity*/
+	  }
+	  .modal-content {
+		  background-color: #fefefe;
+		  margin: auto;
+		  padding: 20px;
+		  border: 1px solid #888;
+		  width: 80%;
+	  }
+	  .close {
+		  color: #aaaaaa;
+		  floar: right;
+		  font-size: 28px;
+		  font-weight: bold;
+	  }
+	  .close:hover
+	  /close:focus {
+		  color: #000;
+		  text-decoration: none;
+		  cursor: pointer;
+	  } 
 	  html, body, #map {
 		  height: 95%;
 		  width: 100%;
@@ -58,16 +74,31 @@
 <body>
   <div id="header">
 	  <h1>Ghouls of Gainesville</h1>
-	  <div class="topnav">
-	  <a class="active" href=#about">About</a>
-	  <a href=#credits>Credits</a>
-	  </div>
+	  <button id="aboutbtn">About</button>
 </div>
+	<div id="about" class="modal">
+		<div class="modal-content">
+			<span class="close">&times;</span>
+			<p>text</p>
+		</div>
   </div>
   <div id="map">
   <script src="https://unpkg.com/leaflet@1.0.3/dist/leaflet.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script>
+    var modal = document.getElementById('about');
+	  var btn = document.getElementById("aboutbtn");
+	  var span = document.getElementsByClassName("close")[0];
+	  btn.onclick = function() {
+		  modal.style.display = "block";
+	  }
+	  span.onclick = function() {
+		  modal.style.display = "none";
+		  window.onclick = function(event) {
+			  if (event.target == modal) {
+				  modal.style.display = "none";
+			  }
+		  }
     // Variable to hold map. Includes settings for where the map will center upon loading, zoom level, etc.
     var map = L.map('map',{ center: [29.651974, -82.325011], zoom: 12, scrollWheelZoom: false});
     // Add OpenStreetMap tile layer to map element + attribution
