--- a/index.html
+++ b/index.html
@@ -73,14 +73,14 @@
 </head>
 <body>
   <div id="header">
-	  <h1>Ghouls of Gainesville</h1>
-	  <button id="mtBtn">About</button>
+	  <h1>Ghouls of Gainesville<button id="mtBtn">About</button></h1>
 	<div id="myModal" class="modal">
 		<div class="modal-content">
 			<span class="close">&times;</span>
 			<p>text</p>
 		</div>
 	  </div>
+	</div>
   <div id="map">
   <script src="https://unpkg.com/leaflet@1.0.3/dist/leaflet.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
