--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 </head>
 <body>
   <div id="header">
-	  <h1>Ghouls of Gainesville<button id="mtBtn">About</button></h1>
+	  <h1>Ghouls of Gainesville            <button id="myBtn">About</button></h1>
 	<div id="myModal" class="modal">
 		<div class="modal-content">
 			<span class="close">&times;</span>
