--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 	  }
 	  .modal {
 		  display: none; /*Hidden by default*/
-		  position: fixed; /*Stay in place*/
+		  position: absolute; /*Stay in place*/
 		  z-index: 1; /*sit on top*/
 		  padding-top: 100px; /*Location of box*/
 		  left: 0;
@@ -67,7 +67,8 @@
 		  height: 95%;
 		  width: 100%;
 		  padding: 0px;
-		  margin: 0px;			  
+		  margin: 0px;	
+		  position: relative;
 	  }
   </style>
 </head>
