--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	  .modal {
 		  display: none; /*Hidden by default*/
 		  position: absolute; /*Stay in place*/
-		  z-index: 1; /*sit on top*/
+		  z-index: 2; /*sit on top*/
 		  padding-top: 100px; /*Location of box*/
 		  left: 0;
 		  top: 0;
@@ -69,6 +69,7 @@
 		  padding: 0px;
 		  margin: 0px;	
 		  position: relative;
+		  z-index: 1;
 	  }
   </style>
 </head>
