--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 </head>
 <body>
   <div id="header">
-	  <h1>Ghouls of Gainesville                                <button id="myBtn">About</button></h1>
+	  <h1>Ghouls of Gainesville                                <button id="myBtn">About</button><button id="myBtn2">Credits</button></h1>
 	  </div>
 	  <div id="myModal" class="modal">	
 		  <div class="modal-content">
