--- a/index.html
+++ b/index.html
@@ -81,7 +81,13 @@
 		  <div class="modal-content">
 		<span class="close">&times;</span>
 		<p>text</p>
-		  </div>  
+		  </div>
+	</div>
+	<div id="myModal2" class="modal">
+		<div class="modal-content">
+			<span class="close">&times;</span>
+			<p>text2</p>
+		</div>
 	  </div>	
 	<div id="map">
 		</div>
@@ -127,6 +133,20 @@ function onLocationFound(e) {
     });
 	      var modal = document.getElementById('myModal');
 	  var btn = document.getElementById("myBtn");
+	  var span = document.getElementsByClassName("close")[0];
+	  btn.onclick = function() {
+		  modal.style.display = "block";
+	  }
+	  span.onclick = function() {
+		  modal.style.display = "none";
+	  }
+		  window.onclick = function(event) {
+			  if (event.target == modal) {
+				  modal.style.display = "none";
+			  }
+		  }
+	       var modal = document.getElementById('myModal2');
+	  var btn = document.getElementById("myBtn2");
 	  var span = document.getElementsByClassName("close")[0];
 	  btn.onclick = function() {
 		  modal.style.display = "block";
