--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 	  <div id="myModal" class="modal">	
 		  <div class="modal-content">
 		<span class="close">&times;</span>
-		<p>text</p>
+		<p>text1</p>
 		  </div>
 	</div>
 	<div id="myModal2" class="modal">
