--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
   <div id="header">
 	  <h1>Ghouls of Gainesville                                <button id="myBtn">About</button><button id="myBtn2">Credits</button></h1>
 	  </div>
-	  <div id="myModal" class="modal">	
+	  <div class="myModal" class="modal">	
 		  <div class="modal-content">
 		<span class="close">&times;</span>
 		<p>text1</p>
@@ -145,17 +145,17 @@ function onLocationFound(e) {
 				  modal.style.display = "none";
 			  }
 		  }
-	       var modal = document.getElementById('myModal2');
-	  var btn = document.getElementById("myBtn2");
+	       var modal2 = document.getElementById('myModal2');
+	  var btn2 = document.getElementById("myBtn2");
 	  var span = document.getElementsByClassName("close")[0];
-	  btn.onclick = function() {
+	  btn2.onclick = function() {
 		  modal.style.display = "block";
 	  }
 	  span.onclick = function() {
-		  modal.style.display = "none";
+		  modal2.style.display = "none";
 	  }
 		  window.onclick = function(event) {
-			  if (event.target == modal) {
+			  if (event.target == modal2) {
 				  modal.style.display = "none";
 			  }
 		  }
