--- a/index.html
+++ b/index.html
@@ -83,12 +83,6 @@
 		<p>text1</p>
 		  </div>
 	</div>
-	<div id="myModal2" class="modal">
-		<div class="modal-content">
-			<span class="close">&times;</span>
-			<p>text2</p>
-		</div>
-	  </div>	
 	<div id="map">
 		</div>
   <script src="https://unpkg.com/leaflet@1.0.3/dist/leaflet.js"></script>
@@ -132,7 +126,7 @@ function onLocationFound(e) {
       }).addTo(map);
     });
 	      var modal = document.getElementById('myModal');
-	  var btn = document.getElementById("myBtn");
+	  var btn = document.getElementById('myBtn');
 	  var span = document.getElementsByClassName("close")[0];
 	  btn.onclick = function() {
 		  modal.style.display = "block";
