--- a/index.html
+++ b/index.html
@@ -77,12 +77,12 @@
   <div id="header">
 	  <h1>Ghouls of Gainesville                                <button id="myBtn">About</button><button id="myBtn2">Credits</button></h1>
 	  </div>
-	  <div class="myModal" class="modal">	
+	  <div id="myModal" class="modal">	
 		  <div class="modal-content">
 		<span class="close">&times;</span>
-		<p>text1</p>
-		  </div>
-	</div>
+		<p>text</p>
+		  </div>  
+	  </div>	
 	<div id="map">
 		</div>
   <script src="https://unpkg.com/leaflet@1.0.3/dist/leaflet.js"></script>
@@ -125,30 +125,20 @@ function onLocationFound(e) {
         }
       }).addTo(map);
     });
-var modal = document.getElementById('myModal');
-
-// Get the button that opens the modal
-var btn = document.getElementById("myBtn");
-
-// Get the <span> element that closes the modal
-var span = document.getElementsByClassName("close")[0];
-
-// When the user clicks the button, open the modal 
-btn.onclick = function() {
-    modal.style.display = "block";
-}
-
-// When the user clicks on <span> (x), close the modal
-span.onclick = function() {
-    modal.style.display = "none";
-}
-
-// When the user clicks anywhere outside of the modal, close it
-window.onclick = function(event) {
-    if (event.target == modal) {
-        modal.style.display = "none";
-    }
-}
+	      var modal = document.getElementById('myModal');
+	  var btn = document.getElementById("myBtn");
+	  var span = document.getElementsByClassName("close")[0];
+	  btn.onclick = function() {
+		  modal.style.display = "block";
+	  }
+	  span.onclick = function() {
+		  modal.style.display = "none";
+	  }
+		  window.onclick = function(event) {
+			  if (event.target == modal) {
+				  modal.style.display = "none";
+			  }
+		  }
   </script>
 </body>
 </html>
