--- a/index.html
+++ b/index.html
@@ -31,6 +31,18 @@
 		margin-top: 0px;
 		margin-bottom: 10px;
 	  }
+	  html, body #myBtn {
+		  background-color: #D8E1F4;
+		  border: none;
+		  color: white;
+		  padding: 10px 20px;
+		  text-align: center;
+		  text-dewcoration: none;
+		  font-family: "Helvetica";
+		  font-size: 16px;
+		  display: inline-block;
+	  }
+		  
 	  .modal {
 		  display: none; /*Hidden by default*/
 		  position: absolute; /*Stay in place*/
