--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 </head>
 <body>
   <div id="header">
-	  <h1>Ghouls of Gainesville                                <button class="button">About</button><button class"button button2">Credits</button></h1>
+	  <h1>Ghouls of Gainesville                                <button class="button">About</button><button class="button button2">Credits</button></h1>
 	  </div>
 	  <div id="myModal" class="modal">	
 		  <div class="modal-content">
