--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 		text-align: left;
 		margin-top: 0px;
 		margin-bottom: 10px;
+		margin-right: 100px;
 	  }
 	  .button {
 		  background-color: #D8E1F4;
@@ -43,6 +44,7 @@
 		  font-size: 16px;
 		  display: inline-block;
 		  cursor: pointer;
+		  margin-right: 10px; 
 	  }
 	  .button2 {background-color: #5a6f91;}
 	  .modal {
@@ -89,7 +91,7 @@
 </head>
 <body>
   <div id="header">
-	  <h1>Ghouls of Gainesville                                <button id="myBtn" class="button">About</button><button id="myBtn2" class="button button2">Credits</button></h1>
+	  <h1>Ghouls of Gainesville<button id="myBtn" class="button">About</button><button id="myBtn2" class="button button2">Credits</button></h1>
 	  </div>
 	  <div id="myModal" class="modal">	
 		  <div class="modal-content">
