--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
 		text-align: left;
 		margin-top: 0px;
 		margin-bottom: 10px;
-		margin-right: 100px;
 	  }
 	  .button {
 		  background-color: #D8E1F4;
@@ -44,7 +43,8 @@
 		  font-size: 16px;
 		  display: inline-block;
 		  cursor: pointer;
-		  margin-right: 10px; 
+		  margin-right: 10px;
+		  margin-left: 100px;
 	  }
 	  .button2 {background-color: #5a6f91;}
 	  .modal {
