--- a/index.html
+++ b/index.html
@@ -46,7 +46,10 @@
 		  margin-right: 10px;
 		  margin-left: 100px;
 	  }
-	  .button2 {background-color: #5a6f91;}
+	  .button2 {
+		  background-color: #5a6f91;
+	  	  margin-left: 10px;
+	  }
 	  .modal {
 		  display: none; /*Hidden by default*/
 		  position: absolute; /*Stay in place*/
