--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 		  cursor: pointer;
 		  margin-right: 10px;
 		  margin-left: 100px;
+		  margin-bottom: 5px;
 	  }
 	  .button2 {
 		  background-color: #5a6f91;
