--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Ghouls of Gainesville</title>
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.3/dist/leaflet.css" />
   <link href='https://fonts.googleapis.com/css?family=Metal Mania' rel='stylesheet'>
+  <link href='https://fonts.googleapis.com/css?family=Pirata One' rel='stylesheet'>
   <style type="text/css">
     .custom .leaflet-popup-tip,
     .custom .leaflet-popup-content-wrapper {
@@ -38,8 +39,8 @@
 		  color: white;
 		  padding: 10px 20px;
 		  text-align: center;
-		  text-dewcoration: none;
-		  font-family: "Helvetica";
+		  text-decoration: none;
+		  font-family: "Pirata One";
 		  font-size: 16px;
 		  display: inline-block;
 		  cursor: pointer;
