--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
 		  background-color: #D8E1F4;
 		  border: none;
 		  border-radius: 8px;
-		  color: white;
+		  color: 161C31;
 		  padding: 10px 20px;
 		  text-align: center;
 		  text-decoration: none;
 		  font-family: "Pirata One";
-		  font-size: 16px;
+		  font-size: 20px;
 		  display: inline-block;
 		  cursor: pointer;
 		  margin-right: 10px;
