--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		margin-bottom: 10px;
 	  }
 	  .button {
-		  background-color: #D8E1F4;
+		  background-color: #8899D1;
 		  border: none;
 		  border-radius: 8px;
 		  color: 161C31;
@@ -49,7 +49,7 @@
 		  margin-bottom: 5px;
 	  }
 	  .button2 {
-		  background-color: #5a6f91;
+		  background-color: #3E4348;
 	  	  margin-left: 10px;
 	  }
 	  .modal {
