--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 		  margin-bottom: 5px;
 	  }
 	  .button2 {
-		  background-color: #3E4348;
+		  background-color: #384160;
 	  	  margin-left: 10px;
 	  }
 	  .modal {
