--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
   <div id="header">
 	  <h1>Ghouls of Gainesville<button id="myBtn" class="button">About</button><button id="myBtn2" class="button button2">Credits</button></h1>
 	  </div>
-	  <div id="myModal" class="modal">	
-		  <div class="modal-content">
+	  <div id="aboutmodal" class="modal">	
+		  <div id="aboutcontent" class="modal-content">
 		<span class="close">&times;</span>
 		<p>text</p>
 		  </div>  
@@ -146,7 +146,7 @@ function onLocationFound(e) {
     var marker = L.marker(e.latlng, {icon:userIcon}).addTo(map); // Add custom userIcon to marker
     marker.bindPopup("<b>Your Location</b><br>Refresh page to update.").openPopup();
 	}
-	      var modal = document.getElementById('myModal');
+	      var modal = document.getElementById('aboutmodal');
 	  var btn = document.getElementById("myBtn");
 	  var span = document.getElementsByClassName("close")[0];
 	  btn.onclick = function() {
