--- a/index.html
+++ b/index.html
@@ -103,7 +103,13 @@
 		<span class="close">&times;</span>
 		<p>text</p>
 		  </div>  
-	  </div>	
+	  </div>
+	<div id="creditsmodal" class="modal">
+		<div id="creditscontent" class="modal-content">
+			<span class="close">&times;</span>
+			<p>text2</p>
+		</div>
+	</div>
 	<div id="map">
 		</div>
   <script src="https://unpkg.com/leaflet@1.0.3/dist/leaflet.js"></script>
@@ -148,6 +154,20 @@ function onLocationFound(e) {
 	}
 	      var modal = document.getElementById('aboutmodal');
 	  var btn = document.getElementById("myBtn");
+	  var span = document.getElementsByClassName("close")[0];
+	  btn.onclick = function() {
+		  modal.style.display = "block";
+	  }
+	  span.onclick = function() {
+		  modal.style.display = "none";
+	  }
+		  window.onclick = function(event) {
+			  if (event.target == modal) {
+				  modal.style.display = "none";
+			  }
+		  }
+	   	var modal = document.getElementById('creditsmodal');
+	  var btn = document.getElementById("myBtn2");
 	  var span = document.getElementsByClassName("close")[0];
 	  btn.onclick = function() {
 		  modal.style.display = "block";
